# iptv_rest

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO  main.cbp  restfull.txt  restfull.yaml
conf/: channels.json  configs.json  license.json  users.json  vod_users.json
src/: auth.hpp  config.hpp  gen_source.py  hardware.cpp  hardware.hpp  includes.hpp  launcher.cpp  launcher.hpp  live.cpp  live.hpp  main.cpp  main_storage.cpp  main_storage.hpp  mongo_driver.cpp  mongo_driver.hpp  report.cpp  report.hpp  report_new.cpp  report_new.hpp  routes.hpp  status.cpp  status.hpp  storage.cpp  storage.hpp  system.cpp  system.hpp  users.cpp  users.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  Makefile  test.cbp  test_api.cbp  test_by_curl.sh  test_launcher.cpp  test_main.cpp  test_main_storage.cpp  test_util.hpp
test/libcurlpp_test/: CMakeLists.txt  test_api.cpp
test/py_test/: mongo.py  test.cpp  test_api.py
test/sh_test/: test_by_curl.sh
